--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.17.21-beta-1",
+  "version": "0.17.21-beta-20",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -46,7 +46,7 @@
   "dependencies": {
     "@freshworks-jaya/freshchat-api": "0.7.33-beta-1.0",
     "@freshworks-jaya/kairos-api": "^0.1.5",
-    "@freshworks-jaya/marketplace-models": "0.1.21",
+    "@freshworks-jaya/marketplace-models": "0.1.21-beta-10",
     "@freshworks-jaya/utilities": "^1.0.0",
     "@google-cloud/logging": "^9.3.1",
     "axios": "^0.21.4",
