--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.17.27",
+  "version": "0.17.27-beta-08",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -44,7 +44,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "0.7.35",
+    "@freshworks-jaya/freshchat-api": "0.7.35-beta-05",
     "@freshworks-jaya/kairos-api": "^0.1.5",
     "@freshworks-jaya/marketplace-models": "0.1.28",
     "@freshworks-jaya/utilities": "^1.0.0",
