--- a/packages/kairos-api/package.json
+++ b/packages/kairos-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/kairos-api",
-  "version": "0.1.5",
+  "version": "0.1.6-beta-02",
   "description": "Provides simple interface for accessing Kairos's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
